@@ -1,4 +1,4 @@
-AC_INIT(fuse, 2.6.0-rc1)
+AC_INIT(fuse, 2.6.0-rc2)
 AC_CANONICAL_TARGET
 AM_INIT_AUTOMAKE
 AM_CONFIG_HEADER(include/config.h)
@@ -21,7 +21,6 @@ esac
 if test "$ac_env_CFLAGS_set" != set; then
 	CFLAGS="-Wall -W -g -O2"
 fi
-CPPFLAGS="$CPPFLAGS -D_FILE_OFFSET_BITS=64 -D_REENTRANT -DFUSE_USE_VERSION=26"
 
 AC_ARG_ENABLE(kernel-module,
 	[  --enable-kernel-module  Compile kernel module ])
@@ -77,6 +76,10 @@ if test -z "$UDEV_RULES_PATH"; then
 	UDEV_RULES_PATH=/etc/udev/rules.d
 fi
 AC_SUBST(UDEV_RULES_PATH)
+if test -z "$INIT_D_PATH"; then
+	INIT_D_PATH=/etc/init.d
+fi
+AC_SUBST(INIT_D_PATH)
 
 AC_SUBST(subdirs2)
 
