@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 
-AM_CPPFLAGS = -I$(top_srcdir)/include
+AM_CPPFLAGS = -I$(top_srcdir)/include -D_FILE_OFFSET_BITS=64 -D_REENTRANT
 noinst_PROGRAMS = fusexmp fusexmp_fh null hello hello_ll
 
 LDADD = ../lib/libfuse.la -lpthread
