@@ -4,7 +4,11 @@
 
     This program can be distributed under the terms of the GNU GPL.
     See the file COPYING.
+
+    gcc -Wall `pkg-config fuse --cflags --libs` fusexmp.c -o fusexmp
 */
+
+#define FUSE_USE_VERSION 26
 
 #include <config.h>
 
